Un poco de todo
cambios en los fondos y muchos retoques. terminada reseñas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilos.css">
@@ -35,22 +36,19 @@
         <section>
             <article class="principal">
                 <div>
-                    <img id="logo" src="imagenes/galeria/logo loki.png" alt="Logo Loki">
+                    <img id="logo" src="imagenes/galeria/loki_logo.png" alt="Logo Loki">
                     <h1 id="tituloinicio">Desata el caos con Loki: Explora el multiverso</h1>
                 </div>
                 </article>
             <article class="secundario">
+                
                 <div class="div_inicio">
-                    <img src="imagenes/galeria/throg.jpg" alt="Throg">
-                    <h2>EASTER EGGS</h2>
-                </div>
-                <div class="div_inicio">
-                    <a href="https://www.youtube.com/watch?v=KcBStos46EM"><img src="imagenes/galeria/trailer.jpg" alt="Throg">
+                    <a href="https://www.youtube.com/watch?v=KcBStos46EM" target="_blank"><img src="imagenes/galeria/trailer.jpg" alt="Throg">
                     <h2>TRAILER OFICIAL</h2>
                     </a>
                 </div>
                 <div class="div_inicio">
-                    <a href="https://www.marvel.com/movies"><img src="imagenes/galeria/Marvel Studios.jpg" alt="MARVEL STUDIOS">
+                    <a href="https://www.marvel.com/movies" target="_blank"><img src="imagenes/galeria/Marvel Studios.jpg" alt="MARVEL STUDIOS">
                     <h2>MARVEL STUDIOS</h2>
                     </a>
                 </div>
@@ -58,10 +56,10 @@
         </section>
         <footer>
             <div class="redes">
-                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
                 <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
