--- a/reseñas.html
+++ b/reseñas.html
@@ -32,41 +32,50 @@
         <section>
             <h1>RESEÑAS</h1>
             <article class="reseñas">
-                <p><u><br>Collider:</u><br><br>
-
-                    Crítica: “La segunda temporada de 'Loki' es un triunfo visual y narrativo. Mantiene la intriga y el ritmo de la primera temporada mientras expande el universo de Loki de manera emocionante e impredecible. Tom Hiddleston sigue brillando en el papel titular, y la incorporación de nuevos personajes como Ouroboros 'OB' añade frescura a la serie.”<br><br></p>
-                <p><u><br>Empire:</u><br><br>
-
-                    Crítica: “La segunda temporada de 'Loki' entrega todo lo que los fans podrían esperar: un argumento retorcido, actuaciones sobresalientes y un enfoque más profundo en la mitología del multiverso. El show sigue siendo una de las piezas más innovadoras del MCU.”<br><br></p>
-                <p><u><br>THe Holliwood Reporter:</u><br><br>
-
-                    Crítica: “'Loki' temporada dos se enfrenta a la tarea de expandir el multiverso con gran éxito. La serie no solo mantiene su característico sentido del humor y el encanto, sino que también profundiza en temas complejos como el destino y el libre albedrío, sin perder de vista el desarrollo de sus personajes.”<br><br></p>
-                <p><u><br>IGN:</u><br><br>
-
-                    Crítica: “La nueva temporada de 'Loki' ofrece una emocionante continuación de su narrativa multiversal, con un equilibrio perfecto entre drama, acción y comedia. La química entre Hiddleston y Owen Wilson sigue siendo el corazón palpitante de la serie.”<br><br></p>   
-                <p><u><br>Entertainment Weekly:</u><br><br>
-
-                    Crítica: “La segunda temporada de 'Loki' no solo mantiene la calidad de la primera, sino que la supera con un guion aún más audaz y una dirección artística impresionante. La dinámica entre Loki y Mobius se explora con mayor profundidad, proporcionando momentos tanto cómicos como emotivos. La serie sigue siendo un punto culminante del MCU en Disney+.”<br><br></p>
-                <p><u><br>THe A.V Club:</u><br><br>
-
-                    Crítica: “Con su combinación de humor, corazón y locura multiversal, 'Loki' sigue siendo una joya en la corona del MCU. La segunda temporada ofrece una narrativa inteligente y visualmente deslumbrante que mantiene a los espectadores al borde de sus asientos. La incorporación de personajes como Ouroboros 'OB' añade una nueva dimensión de ingenio a la serie.”<br><br></p>
-                <p><u><br>Screen Rant:</u><br><br>
-
-                    Crítica: “La segunda temporada de 'Loki' es una continuación fascinante y llena de acción que explora aún más el vasto multiverso. Tom Hiddleston ofrece una actuación fenomenal, y la serie logra equilibrar sus elementos de ciencia ficción con una narrativa centrada en los personajes. Cada episodio es un viaje emocionante lleno de sorpresas.”<br><br></p>
-                <p><u><br>Deadline:</u><br><br>
-
-                    Crítica: “'Loki' vuelve con una temporada más compleja y visualmente audaz. La serie sobresale al explorar los dilemas éticos y las intrigas del multiverso mientras mantiene su tono distintivo y su sentido del humor. La química entre Hiddleston y el elenco de apoyo sigue siendo electrizante, haciendo de esta temporada una de las mejores entregas del MCU hasta la fecha.”<br><br></p>
-                <p><u><br>Forbes:</u><br><br>
-
-                    Crítica: “'Loki' sigue sorprendiendo en su segunda temporada con una mezcla brillante de ingenio, emoción y espectaculares efectos visuales. La serie se eleva con una narrativa que desafía la percepción del tiempo y el espacio, manteniendo a los espectadores cautivados en cada episodio. Tom Hiddleston demuestra una vez más su habilidad para darle vida a Loki con profundidad y carisma, haciendo de esta entrega un viaje irresistible a través del multiverso.”<br><br></p>     
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/Moviefone_logo.png" alt="Moviefone logo"></a>
+                    </div>
+                    <p>“Su actuación [Jonathan Majors] como Timely es buena (en realidad, es más entretenida en algunos aspectos que Kang de Quantumania), pero es difícil separar lo que sucede legalmente de lo que está en pantalla. (...)<br><br> Sin embargo, la segunda temporada de Loki sigue representando uno de los ejemplos más inventivos y entretenidos de lo que el equipo de Marvel puede hacer. Incluso con el tejido conectivo que se requiere para el resto de la MCU, esto hace mucho más que algunas historias de superhéroes más básicas y continúa trazando con orgullo su propia rama extraña del universo masivo y vinculado.”<br><br></p> 
+                </div>
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/Empire_logo.png" alt="Empire logo"></a>
+                    </div>
+                    <p>“Qué fuerte entrada de aire fresco asgardiano es Loki, el primero de los programas de Disney+ del MCU en obtener una segunda serie de episodios, y uno que todavía se siente distintivo, en un multiverso que a veces corre el riesgo de sentirse repetitivo. (...)<br><br> Con el multiverso tambaleándose a su alrededor, Loki es una hebra de la línea de tiempo que mantiene su originalidad e intención y, de hecho, prospera. Ya era hora.”<br><br></p>
+                </div>
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/THR_logo.png" alt="THR logo"></a>
+                    </div>
+                    <p>“Los cuatro nuevos episodios enviados a los críticos tienen sólo un poco de la rareza esotérica que con tanta frecuencia hizo que la primera temporada fuera una maravilla.<br><br> La trama es tan complicada que rara vez se desprende la sensación de diversión, pero gracias al excelente elenco y a algunos de los mejores diseños de producción de la televisión, casi siempre hay algo que capta tu atención, si no que desencadena una inversión emocional.”<br><br></p>
+                </div>
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/slash_logo.png" alt="Slash logo"></a>
+                    </div>
+                    <p>“A riesgo de condenar con débiles elogios, es realmente reconfortante ver una serie de Marvel que en realidad trata sobre algo real y significativo, al menos más que la pregunta estándar de si se pueden girar suficientes engranajes narrativos para establecer vagamente una historia o una posible dirección para alguna película o programa futuro que tome las cosas a continuación.<br><br> En una continuación perfecta de gran parte de las preocupaciones de la temporada 1, Loki retoma el hilo del giro del Dios de la Travesura hacia el heroísmo, arrojando una red más amplia sobre si las personas malas que han hecho cosas malas realmente pueden ser capaces de cambiar sus formas para siempre.”<br><br></p>   
+                </div>
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/IndieWire_logo.png" alt="IndieWire logo"></a>
+                    </div>
+                    <p>“Las temporadas de debut deben ser audaces y probar cosas, para que las segundas temporadas puedan aprovechar lo que funciona y reunir los mejores elementos. Pero Loki no es un programa de televisión tradicional. Es un engranaje en la máquina MCU más grande, y esa máquina está fija en su camino a largo plazo y es hostil a las desviaciones internas.<br><br> Por lo tanto, con gran pesar y sin sorpresa puedo informar que la temporada 2 de Loki no evoluciona, no pone sus mejores partes en primer plano y no escapa a la familiaridad estancada que obstaculiza la aburrida avalancha de proyectos recientes de Marvel. Es más de lo mismo. Y lo sabe.”<br><br></p>
+                </div>
+                <div id="cont_reseñas">
+                    <div>
+                        <a href="https://www.tomatazos.com/articulos/870932/Loki-Temporada-2-Top-de-criticas-resenas-y-calificaciones" target="_blank"><img src="imagenes/galeria/reviewlogos/collider-logo.png" alt="Collider logo"></a>
+                    </div>               
+                    <p>“A pesar de divertirse menos saltando en el tiempo, la serie juega más con bucles de tiempo esta temporada, así como con diferentes formas de viajes en el tiempo y paradojas del tiempo. Es divertido profundizar en los aspectos más extraños del viaje en el tiempo, y nada se presta mejor a lo extraño que un programa como este.<br><br> A Loki siempre le iba a ir bien como programa de televisión. La temporada 1 fue muy querida y con un personaje favorito de los fanáticos como el Dios de la Travesura de Hiddleston al mando, la temporada 2 demuestra que la serie no solo no ha perdido su toque sino que sigue siendo uno de los pilares más fuertes del MCU en su conjunto.”<br><br></p>    
+                </div>        
             </article>
         </section>
         <footer>
             <div class="redes">
-                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
                 <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
