--- a/galeria.html
+++ b/galeria.html
@@ -39,7 +39,7 @@
                 <a class="example-image-link" href="imagenes/galeria/loki1.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki1.jpg" alt="Buzz Lightyear con su gato"/></a>
                 <a class="example-image-link" href="imagenes/galeria/loki2.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki2.jpg" alt="Buzz Lightyear con su gato"/></a>
                 <a class="example-image-link" href="imagenes/galeria/loki3.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/loki3.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
-                <a class="example-image-link" href="imagenes/galeria/loki_mobius.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/loki_mobius.jpg" alt="Buzz Lightyear volando"/></a>
+                <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie1.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear volando"><img class="example-image" src="imagenes/galeria/loki_y_sylvie1.jpg" alt="Buzz Lightyear volando"/></a>
                 <a class="example-image-link" href="imagenes/galeria/loki_y_sylvie.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/loki_y_sylvie.jpg" alt="Buzz Lightyear con su gato"/></a>
                 <a class="example-image-link" href="imagenes/galeria/mobius.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear con su gato."><img class="example-image" src="imagenes/galeria/mobius.jpg" alt="Buzz Lightyear con su gato"/></a>
                 <a class="example-image-link" href="imagenes/galeria/mobius_loki_1893.jpg" data-lightbox="Buzz" data-title="Buzz Lightyear señalando su imagen en un espejo."><img class="example-image" src="imagenes/galeria/mobius_loki_1893.jpg" alt="Buzz Lightyear señalando su imagen en un espejo"/></a>
@@ -53,10 +53,10 @@
         </section>
         <footer>
             <div class="redes">
-                <a href="https://www.facebook.com/lokiofficial/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-                <a href="https://x.com/lokiofficial?lang=es"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-                <a href="https://www.youtube.com/@MarvelLatino"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-                <a href="https://www.instagram.com/officialloki/?hl=es"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/lokiofficial/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+                <a href="https://x.com/lokiofficial?lang=es" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@MarvelLatino" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+                <a href="https://www.instagram.com/officialloki/?hl=es" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
             </div>
             <div class="copy">
                 <h4>©2024 Hecho por Gauna, Nicolás Daniel.</h4>
